<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.CommunityActivity">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="693dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="362dp"
            android:layout_height="652dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_corner_background"
            android:elevation="4dp"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/backButton"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/communityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="Community"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="30dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginEnd="16dp">

                        <ImageButton
                            android:id="@+id/facebookButton"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/facebook_button"
                            android:src="@drawable/ic_facebook" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Facebook"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/discordButton"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/discord_button"
                            android:src="@drawable/ic_discord" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Discord"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
